<resources>
    <string name="app_name">My Pets2</string>
    <string name="imgpets" />


    <string name="back">back</string>
    <string name="next">Next</string>
    <string name="my_pet_information">My Pet Information</string>
    <string name="name">Name:</string>
    <string name="put_an_image_url">Put an image Url</string>
    <string name="specie">Specie:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="breed">Breed:</string>
    <string name="colour">Colour:</string>
    <string name="chipid">ChipID:</string>
    <string name="ownername">OwnerName:</string>
    <string name="owneradddress">OwnerAdddress:</string>
    <string name="ownerphone">OwnerPhone:</string>
    <string name="vetname">VetName:</string>
    <string name="vetaddress">VetAddress:</string>
    <string name="vetphone">VetPhone:</string>
    <string name="distinguishingmarks">DistinguishingMarks:</string>
    <string name="sumbit">Sumbit</string>
    <string name="pet_image">Pet image</string>
    <string name="vet_information">Vet Information</string>
    <string name="owner_information">Owner Information</string>
    <string name="cats">Cat</string>
    <string name="dogs">Dog</string>
    <string name="others">Other</string>
    <string name="submit">Submit</string>
    <string name="no_pets_of_that_specie">No Pets of that Species!</string>
    <string name="an_image_of_pets">An image of Pets.</string>
    <string name="choose_your_favorite_species">Choose your favourite Species!</string>
    <string name="go_back_to_choose_another_species">Go back to choose another Species.</string>
    <string name="an_image_from_my_pet">An image from my Pet</string>
    <string name="pet_name">Pet Name :</string>
    <string name="menu_login_logout">menu_login_logout</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="registration_form">Registration Form</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="surname">Surname</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="Name">Name</string>
    <string name="please_loigin">- Please Loigin -</string>
    <string name="please_login2">- Please Login -</string>


</resources>
